<resources>
    <string name="app_name">My Project 0324</string>
    <string name="action_settings">Settings</string>
    <string name="projectname">Android看家宝管理系统</string>
    <string name="loginUName">用户名</string>
    <string name="loginUPwd">密码</string>
    <string name="NewPwd">新密码</string>
    <string name="ReNewPwd">重复密码</string>
    <string name="btnLogin">登录</string>
    <string name="btnReg">注册</string>
    <string name="main">主页</string>
    <string name="change">修改</string>


    <string name="login_et_uname">请输入用户名</string>
    <string name="login_et_upwd">请输入密码</string>
    <string name="login_et_rupwd">请输入确认密码</string>
    <string name="reg_rewrite">重置</string>
    <string name="login_btn_reg">注册并登陆</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="url">http://192.168.62.120:8080/My0331/jaxrs</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="title_activity_zhu">ZhuActivity</string>
    <string name="userinfo_change_title">用户个人信息</string>
    <string name="user_info_change_pwd">用户密码修改</string>


<string name="welcome_intro">
            欢迎使用Android看家宝远程监控系统客户端。\n
    gsr©2016
	</string>
    <string name="btn_new">增加</string>
    <string name="btn_modify">修改</string>
    <string name="btn_delete">删除</string>
    <string name="connect">连接</string>
	<string name="table_sql">
	    CREATE TABLE tb_cammonitor_configs(
	    _id INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,
        uid VARCHAR(30) NULL,
	    name VARCHAR(30) NULL,
	    ip VARCHAR(64) NULL,
	    port VARCHAR(64) NULL,
	    port1 VARCHAR(64) NULL,
	    password VARCHAR(64) NULL,
	    client_dir TEXT NULL,
	    connect_type NUMERIC DEFAULT 1 NULL
		)
	</string>
	<string name="drop_sql">
		drop table if EXISTS tb_cammonitor_configs;
	</string>
    <string name="add_title">远程监控服务设置</string>
    <string name="add_ip">主机名</string>
    <string name="add_type">类型</string>
    <string name="add_port">手机摄像头端口</string>
    <string name="add_port2">服务器连接端口</string>
    <string name="add_username">用户名</string>
    <string name="add_password">用户密码</string>
    <string name="add_localdir">本地目录</string>
    <string name="btn_test">测试</string>
    <string name="btn_save">保存</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_ok">确定</string>
    <string name="error">错误</string>
    <string name="error_ip">请输入主机名</string>
    <string name="error_port">请输入端口</string>
    <string name="CamMonitorConfigActivty_Cfg_Name">请输入配置的名称</string>
    <string name="server_disconnect">断开</string>
    <string name="title_activity_add_connect">AddConnectActivity</string>
    <string name="title_activity_server">server</string>
    <string name="title_activity_my_menu">MyMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_my_menu2">MyMenu2Activity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>

</resources>
