<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gsr_pc.myproject0324.ZhuActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_zhu">

    <LinearLayout
        android:id="@+id/etTitle"
        android:background="#d5ffa5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/welcome_intro"
            android:gravity="center_horizontal"
            android:textSize="10pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/etLayout"
        android:layout_below="@+id/etTitle"
        android:background="#d5ffa5"
        android:orientation="vertical"
        android:layout_marginTop="5pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SpinnerLdapConfig"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnConnect"
            android:text="@string/connect"

            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/etLayout"
        android:layout_marginTop="5pt"
        android:id="@+id/btnLayout"
        android:background="#d5ffa5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnNew"
            android:text="@string/btn_new"
            android:layout_margin="1dip"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnModify"
            android:text="@string/btn_modify"
            android:layout_margin="1dip"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnDelete"
            android:text="@string/btn_delete"
            android:layout_margin="1dip"
            />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
