<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gsr_pc.myproject0324.UserInfoActivity"
    tools:showIn="@layout/activity_user_info">
    <LinearLayout
        android:id="@+id/etTitle"
        android:background="#d5ffa5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/userinfo_change_title"
            android:gravity="center_horizontal"
            android:textSize="10pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/etTitle"
        android:id="@+id/etChaUname"
        android:layout_marginTop="5dp"
        android:background="#d5ffa5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Cha_Uame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginUName"
            android:width="60dip">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:width="150dip"
            android:numeric="integer"
            android:text="8888"
            android:layout_height="45dip"
            android:id="@+id/uname_cha">
        </TextView>
        <Button
            android:id="@+id/btnChaUname"
            android:text="@string/change"
            android:layout_margin="2pt"
            android:layout_width="50pt"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/etChaUname"
        android:id="@+id/etChaPwd"
        android:layout_marginTop="5dp"
        android:background="#d5ffa5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_cha_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginUPwd"
            android:width="60dip">
        </TextView>
        <Button
            android:id="@+id/btnChaPwd"
            android:text="@string/change"
            android:layout_margin="2pt"
            android:layout_width="50pt"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
